--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "rough-scones-backend",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "testdb": "node test-db.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "fastify": "^5.6.2",
-    "fastify-cors": "^6.0.3",
+    "express": "^4.22.1",
     "mysql2": "^3.16.0"
   },
   "devDependencies": {
